--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+body {
+  background-image: url("https://i.imgur.com/JN0VDLd.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-color: #afaaaa;
+}
+p {
+  font-family: 'Roboto Slab', serif;
+  font-size: 18px;
   color: white;
+  margin: 0;
+}
+h2 {
+  font-family: 'Roboto Slab', serif;
+  color: white;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.appOne {
+  font-family: 'Roboto Slab', serif;
+  color: white;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span{
+  font-family: 'Roboto Slab', serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+
 }
